# Robotics_Corner_OpenCV

./: CMakeLists.txt  LICENSE  README.md  main.cpp
FaceDetector/: FaceDetector.cpp
Face_Detection/: CMakeLists.txt  README.md  main.cpp
Face_Detection/FaceDetector/: FaceDetector.hpp
Face_Detection/FeatureExecutor/: FeatureExecutor.cpp
Face_Detection/object_detector/: object_detector.cpp  object_detector.hpp
FeatureExecutor/: FeatureExecutor.cpp  FeatureExecutor.hpp
GtestProject/: CMakeLists.txt  CMakeLists_with_fetchGtest.txt  CMakeLists_without_fetchGtest.txt  Makefile  README.md
GtestProject/src/calculator/: Calculator.cpp  Calculator.hpp
GtestProject/src/testproject/: my_code.cpp  my_code.hpp
GtestProject/test/: test_calculator.cpp  test_my_code.cpp
